--- a/index.html
+++ b/index.html
@@ -172,10 +172,79 @@
 
             <article class="article4">
                 <div class="row cf">
-                    <div class="content content1"></div>
-                    <div class="content content2"></div>
-                    <div class="content content3"></div>
-                    <div class="content content4"></div>
+                    <div class="content content1">
+                        <ul class="tab">
+                            <li>NEWS &amp; NOTICE</li>
+                            <li>DATA</li>
+                        </ul>
+                        <div class="table">
+                            <div>
+                                <table>
+                                    <caption class="blind">공지사항</caption>
+                                    <colgroup>
+                                        <col>
+                                        <col>
+                                    </colgroup>
+                                    <tbody>
+                                        <tr>
+                                            <td></td>
+                                            <td><a href="#">공지사항 테스트글입니다. 공지사항 테스트글입니다. 공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td></td>
+                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td></td>
+                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td></td>
+                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td></td>
+                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content content2">
+                        <a href="#">
+                            <div class="con">
+                                <div>
+                                    <img src="./img/bnsq2_in_ov_n1_1.jpg" alt="">
+                                    <div class="dark"></div>
+                                </div>
+                                <h2>BUSINESS</h2>
+                                <p>믿음과 신뢰의 기업정신으로<br>
+                                    노력하겠습니다.</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="content content3">
+                        <a href="#">
+                            <div class="con">
+                                <div>
+                                    <div class="dark"></div>
+                                    <img src="./img/bnsq2_in_ov_n1_2.jpg" alt="">
+                                </div>
+                                <h2>CONTACT US</h2>
+                                <p>궁금한 사항은 이곳에<br>
+                                    문의하세요.</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="content content4">
+                        <div class="box"></div>
+                    </div>
                 </div>
             </article>
             <article class="article5"></article>
