--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
                 <div class="row cf">
                     <div class="content content1">
                         <ul class="tab">
-                            <li>NEWS &amp; NOTICE</li>
+                            <li class="active">NEWS &amp; NOTICE</li>
                             <li>DATA</li>
                         </ul>
-                        <div class="table">
+                        <div class="table active">
                             <div>
                                 <table>
                                     <caption class="blind">공지사항</caption>
@@ -190,6 +190,44 @@
                                         <tr>
                                             <td><img src="./img/output_ol.gif" alt=""></td>
                                             <td><a href="#">공지사항 테스트글입니다. 공지사항 테스트글입니다. 공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img src="./img/output_ol.gif" alt=""></td>
+                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img src="./img/output_ol.gif" alt=""></td>
+                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img src="./img/output_ol.gif" alt=""></td>
+                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                        <tr>
+                                            <td><img src="./img/output_ol.gif" alt=""></td>
+                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                            <td>2021-01-05</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="table">
+                            <div>
+                                <table>
+                                    <caption class="blind">공지사항</caption>
+                                    <colgroup>
+                                        <col>
+                                        <col>
+                                    </colgroup>
+                                    <tbody>
+                                        <tr>
+                                            <td><img src="./img/output_ol.gif" alt=""></td>
+                                            <td><a href="#">동해물과 백두산이 마르고 닳도록 하나님이 보우하사 우리나라만세</a></td>
                                             <td>2021-01-05</td>
                                         </tr>
                                         <tr>
@@ -256,90 +294,91 @@
                         </div>
                     </div>
                 </div>
-            </article>
-            <article class="article5">
-                <div class="last_slide_g">
-                    <div class="last_slide cf slide1">
-                        <a href="#">
-                            <div class="text">
-                                <div>BIZ-1</div>
-                                <div><span class="core">핵심사업-1</spa>
-                                </div>
-                                <div>최신 기술과 오랜 노하우가 있는<br>
-                                    첨단산업의 선두주자 OOO기업의<br>
-                                    핵심사업, 핵심기술을 소개합니다.
-                                </div>
-                                <div><span class="detail">자세히보기</span></div>
-                            </div>
-                        </a>
-
-                        <div class="img">
+    </div>
+    </article>
+    <article class="article5">
+        <div class="last_slide_g">
+            <div class="last_slide cf slide1">
+                <a href="#">
+                    <div class="text">
+                        <div>BIZ-1</div>
+                        <div><span class="core">핵심사업-1</spa>
                         </div>
-                    </div>
-                    <div class="last_slide cf slide2">
-                        <a href="#">
-                            <div class="text">
-                                <div>BIZ-2</div>
-                                <div><span class="core">핵심사업-2</span></div>
-                                <div>최신 기술과 오랜 노하우가 있는<br>
-                                    첨단산업의 선두주자 OOO기업의<br>
-                                    핵심사업, 핵심기술을 소개합니다.
-                                </div>
-                                <div><span class="detail">자세히보기</span></div>
-                            </div>
-                        </a>
-
-                        <div class="img">
+                        <div>최신 기술과 오랜 노하우가 있는<br>
+                            첨단산업의 선두주자 OOO기업의<br>
+                            핵심사업, 핵심기술을 소개합니다.
                         </div>
+                        <div><span class="detail">자세히보기</span></div>
                     </div>
-                    <div class="last_slide cf slide3">
-                        <a href="#">
-                            <div class="text">
-                                <div>BIZ-3</div>
-                                <div><span class="core">핵심사업-3</span></div>
-                                <div>최신 기술과 오랜 노하우가 있는<br>
-                                    첨단산업의 선두주자 OOO기업의<br>
-                                    핵심사업, 핵심기술을 소개합니다.
-                                </div>
-                                <div><span class="detail">자세히보기</span></div>
-                            </div>
-                        </a>
+                </a>
 
-                        <div class="img">
-                        </div>
-                    </div>
-                </div>
-            </article>
-        </section>
-
-
-
-        <footer id="footer">
-            <div class = "bottom_menu_g">
-                <div class="bottom_menu1">
-                    <ul>
-                        <li><a href="#">COMPANY</a></li>
-                        <li><a href="#">BUSINESS</a></li>
-                        <li><a href="#">GALLERY</a></li>
-                        <li><a href="#">Q&amp;A</a></li>
-                        <li><a href="#">BOARD</a></li>
-                    </ul>
-                </div>
-                <div class="bottom_menu2 cf">
-                    <address class="address">
-                        <span>(우. 5513) 서울특별시 강남구 논현로 21길 96-36 강남빌딩 314 3F 비주얼플랜</span>
-                        <span>| 전화 : 070-7592-8611</span>
-                        <span>| 팩스 : 020-5236-9635 </span>
-                        <span>| 사업자등록번호 : 600-22-45239 </span>
-                        <span>| 대표 : 김성훈 </span>
-                        <span>| 개인정보관리책임자 : 박영호</span>
-                        <span>spikeveritas@gmail.com | 개인정보처리방침</span>
-                    </address>
-                    <div class="sns">
-                    </div>
+                <div class="img">
                 </div>
             </div>
-        </footer>
+            <div class="last_slide cf slide2">
+                <a href="#">
+                    <div class="text">
+                        <div>BIZ-2</div>
+                        <div><span class="core">핵심사업-2</span></div>
+                        <div>최신 기술과 오랜 노하우가 있는<br>
+                            첨단산업의 선두주자 OOO기업의<br>
+                            핵심사업, 핵심기술을 소개합니다.
+                        </div>
+                        <div><span class="detail">자세히보기</span></div>
+                    </div>
+                </a>
+
+                <div class="img">
+                </div>
+            </div>
+            <div class="last_slide cf slide3">
+                <a href="#">
+                    <div class="text">
+                        <div>BIZ-3</div>
+                        <div><span class="core">핵심사업-3</span></div>
+                        <div>최신 기술과 오랜 노하우가 있는<br>
+                            첨단산업의 선두주자 OOO기업의<br>b
+                            핵심사업, 핵심기술을 소개합니다.
+                        </div>
+                        <div><span class="detail">자세히보기</span></div>
+                    </div>
+                </a>
+
+                <div class="img">
+                </div>
+            </div>
+        </div>
+    </article>
+    </section>
+
+
+
+    <footer id="footer">
+        <div class="bottom_menu_g">
+            <div class="bottom_menu1">
+                <ul>
+                    <li><a href="#">COMPANY</a></li>
+                    <li><a href="#">BUSINESS</a></li>
+                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="#">Q&amp;A</a></li>
+                    <li><a href="#">BOARD</a></li>
+                </ul>
+            </div>
+            <div class="bottom_menu2 cf">
+                <address class="address">
+                    <span>(우. 5513) 서울특별시 강남구 논현로 21길 96-36 강남빌딩 314 3F 비주얼플랜</span>
+                    <span>| 전화 : 070-7592-8611</span>
+                    <span>| 팩스 : 020-5236-9635 </span>
+                    <span>| 사업자등록번호 : 600-22-45239 </span>
+                    <span>| 대표 : 김성훈 </span>
+                    <span>| 개인정보관리책임자 : 박영호</span>
+                    <span>spikeveritas@gmail.com | 개인정보처리방침</span>
+                </address>
+                <div class="sns">
+                </div>
+            </div>
+        </div>
+    </footer>
     </div>
     <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
