--- a/index.html
+++ b/index.html
@@ -173,123 +173,131 @@
 
             <article class="article4">
                 <div class="row cf">
-                    <div class="content content1">
-                        <ul class="tab">
-                            <li class="active">NEWS &amp; NOTICE</li>
-                            <li>DATA</li>
-                        </ul>
-                        <div class="table active">
-                            <div>
-                                <table>
-                                    <caption class="blind">공지사항</caption>
-                                    <colgroup>
-                                        <col>
-                                        <col>
-                                    </colgroup>
-                                    <tbody>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다. 공지사항 테스트글입니다. 공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                    <div class="left">
+                        <div class="content content1">
+                            <ul class="tab">
+                                <li class="active">NEWS &amp; NOTICE</li>
+                                <li>DATA</li>
+                            </ul>
+                            <div class="table active">
+                                <div>
+                                    <table>
+                                        <caption class="blind">공지사항</caption>
+                                        <colgroup>
+                                            <col>
+                                            <col>
+                                        </colgroup>
+                                        <tbody>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다. 공지사항 테스트글입니다. 공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <div class="table">
+                                <div>
+                                    <table>
+                                        <caption class="blind">공지사항</caption>
+                                        <colgroup>
+                                            <col>
+                                            <col>
+                                        </colgroup>
+                                        <tbody>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">동해물과 백두산이 마르고 닳도록 하나님이 보우하사 우리나라만세</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                            <tr>
+                                                <td><img src="./img/output_ol.gif" alt=""></td>
+                                                <td><a href="#">공지사항 테스트글입니다.</a></td>
+                                                <td>2021-01-05</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
-                        <div class="table">
-                            <div>
-                                <table>
-                                    <caption class="blind">공지사항</caption>
-                                    <colgroup>
-                                        <col>
-                                        <col>
-                                    </colgroup>
-                                    <tbody>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">동해물과 백두산이 마르고 닳도록 하나님이 보우하사 우리나라만세</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                        <tr>
-                                            <td><img src="./img/output_ol.gif" alt=""></td>
-                                            <td><a href="#">공지사항 테스트글입니다.</a></td>
-                                            <td>2021-01-05</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                        <div class="content content2">
+                            <a href="#">
+                                <div class="con">
+                                    <div>
+                                        <img src="./img/bnsq2_in_ov_n1_1.jpg" alt="">
+                                    </div>
+                                    <h2>BUSINESS</h2>
+                                    <p>믿음과 신뢰의 기업정신으로<br>
+                                        노력하겠습니다.</p>
+                                </div>
+                                <div class="go">
+                                    <span>+go</span>
+                                </div>
+                            </a>
                         </div>
                     </div>
-                    <div class="content content2">
-                        <a href="#">
-                            <div class="con">
-                                <div>
-                                    <img src="./img/bnsq2_in_ov_n1_1.jpg" alt="">
-                                    <div class="dark"></div>
+                    <div class="right">
+                        <div class="content content3">
+                            <a href="#">
+                                <div class="con">
+                                    <div>
+                                        <img src="./img/bnsq2_in_ov_n1_2.jpg" alt="">
+                                    </div>
+                                    <h2>CONTACT US</h2>
+                                    <p>궁금한 사항은 이곳에<br>
+                                        문의하세요.</p>
                                 </div>
-                                <h2>BUSINESS</h2>
-                                <p>믿음과 신뢰의 기업정신으로<br>
-                                    노력하겠습니다.</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="content content3">
-                        <a href="#">
-                            <div class="con">
-                                <div>
-                                    <div class="dark"></div>
-                                    <img src="./img/bnsq2_in_ov_n1_2.jpg" alt="">
+                                <div class="go">
+                                    <span>+go</span>
                                 </div>
-                                <h2>CONTACT US</h2>
-                                <p>궁금한 사항은 이곳에<br>
-                                    문의하세요.</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="content content4">
-                        <div class="box">
-                            <div class="box_title">CUSTOMER CENTER</div>
-                            <span class="tel">TEL</span><span class="tel_num">070-1234-5678</span><br>
-                            <span class="fax">FAX</span><span class="fax_num">020-1234-5678</span>
-                            <div class="box_bottom">
-                                <b>- 월 ~ 금 :</b> 오전9시 ~ 오후6시<br>
-                                <b>- 토, 일, 공휴일 :</b> 휴무<br>
-                                <b>- email :</b> spikeveritas@gmail.com
+                            </a>
+                        </div>
+                        <div class="content content4">
+                            <div class="box">
+                                <div class="box_title">CUSTOMER CENTER</div>
+                                <span class="tel">TEL</span><span class="tel_num">070-1234-5678</span><br>
+                                <span class="fax">FAX</span><span class="fax_num">020-1234-5678</span>
+                                <div class="box_bottom">
+                                    <b>- 월 ~ 금 :</b> 오전9시 ~ 오후6시<br>
+                                    <b>- 토, 일, 공휴일 :</b> 휴무<br>
+                                    <b>- email :</b> spikeveritas@gmail.com
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -375,10 +383,35 @@
                     <span>spikeveritas@gmail.com | 개인정보처리방침</span>
                 </address>
                 <div class="sns">
+                    <div class="sns_content">
+                        <span>(C) VISUALPLAN. All Rights Reserved.</span><br>
+                        <ul>
+                            <li><a href="https://section.blog.naver.com/BlogHome.naver?directoryNo=0&currentPage=1&groupId=0"
+                                    target="_blank"><img src="./img/s_icon-blog.gif" alt=""></a></li>
+                            <li><a href="https://section.cafe.naver.com/ca-fe/" target="_blank"><img
+                                        src="./img/s_icon-cafe.gif" alt=""></a></li>
+                            <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/s_icon-fbook.gif"
+                                        alt=""></a></li>
+                            <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/s_icon-instar.gif"
+                                        alt=""></a></li>
+                            <li><a href="https://accounts.kakao.com/login/?continue=https%3A%2F%2Faccounts.kakao.com%2Fweblogin%2Faccount#login"
+                                    target="_blank"><img src="./img/s_icon-kas.gif" alt=""></a></li>
+                            <li><a href="https://twitter.com/" target="_blank"><img src="./img/s_icon-tweeter.gif"
+                                        alt=""></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </footer>
+
+    <div id="gotop">
+        <a href="#">
+            <span class="blind">맨위로</span>
+            <i class="fa-solid fa-arrow-up"></i>
+        </a>
+    </div>
+
     </div>
     <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
