--- a/index.html
+++ b/index.html
@@ -262,13 +262,12 @@
                                     <div>
                                         <img src="./img/bnsq2_in_ov_n1_1.jpg" alt="">
                                     </div>
+                                    <span><b>+go</b></span>
                                     <h2>BUSINESS</h2>
                                     <p>믿음과 신뢰의 기업정신으로<br>
                                         노력하겠습니다.</p>
                                 </div>
-                                <div class="go">
-                                    <span>+go</span>
-                                </div>
+                                    
                             </a>
                         </div>
                     </div>
@@ -279,13 +278,12 @@
                                     <div>
                                         <img src="./img/bnsq2_in_ov_n1_2.jpg" alt="">
                                     </div>
+                                    <span><b>+go</b></span>
                                     <h2>CONTACT US</h2>
                                     <p>궁금한 사항은 이곳에<br>
                                         문의하세요.</p>
                                 </div>
-                                <div class="go">
-                                    <span>+go</span>
-                                </div>
+                                
                             </a>
                         </div>
                         <div class="content content4">
@@ -374,13 +372,31 @@
             </div>
             <div class="bottom_menu2 cf">
                 <address class="address">
-                    <span>(우. 5513) 서울특별시 강남구 논현로 21길 96-36 강남빌딩 314 3F 비주얼플랜</span>
-                    <span>| 전화 : 070-7592-8611</span>
-                    <span>| 팩스 : 020-5236-9635 </span>
-                    <span>| 사업자등록번호 : 600-22-45239 </span>
-                    <span>| 대표 : 김성훈 </span>
-                    <span>| 개인정보관리책임자 : 박영호</span>
-                    <span>spikeveritas@gmail.com | 개인정보처리방침</span>
+                    <div class="address_content cf">
+                        <span>(우. 5513) 서울특별시 강남구 논현로 21길 96-36 강남빌딩 314 3F 비주얼플랜 
+                        </span>
+                        <span> 전화 : 070-7592-8611 
+                            <span>|</span>
+                        </span>
+                        <span> 팩스 : 020-5236-9635 
+                            <span>|</span>
+                        </span>
+                        <span> 사업자등록번호 : 600-22-45239 
+                            <span>|</span>
+                        </span>
+                        <span> 대표 : 김성훈 
+                            <span>|</span>
+                        </span>
+                        <span> 개인정보관리책임자 : 박영호 
+                            <span>|</span>
+                        </span>
+                        <span>spikeveritas@gmail.com
+                            <span>|</span>
+                        </span>
+                        <span>개인정보처리방침
+                            <span>|</span>
+                        </span>
+                    </div>
                 </address>
                 <div class="sns">
                     <div class="sns_content">
@@ -413,6 +429,12 @@
     </div>
 
     </div>
+
+
+    <div class="introAni">
+        <div><img src="./img/preloader.gif" alt=""></div>
+    </div>
+
     <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
 </body>
