--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="content content1">
+                            <div class="content content2">
                                 <div><img src="./img/bncl4_ov_n1_2.jpg" alt=""></div>
                                 <h3>COMPANY</h3>
                                 <p>오랜 경험과 노하우를 기반으로<br>
@@ -143,7 +143,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="content content1">
+                            <div class="content content3">
                                 <div><img src="./img/bncl4_ov_n1_3.jpg" alt=""></div>
                                 <h3>COMPANY</h3>
                                 <p>오랜 경험과 노하우를 기반으로<br>
@@ -152,7 +152,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="content content1">
+                            <div class="content content4">
                                 <div><img src="./img/bncl4_ov_n1_4.jpg" alt=""></div>
                                 <h3>COMPANY</h3>
                                 <p>오랜 경험과 노하우를 기반으로<br>
@@ -427,9 +427,15 @@
             <i class="fa-solid fa-arrow-up"></i>
         </a>
     </div>
-
     </div>
 
+    <div class="popup">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eaque, architecto molestias error accusamus a laboriosam perferendis sunt voluptates fuga corporis cumque saepe esse. Eius doloribus voluptate doloremque minus sit!
+        <div class="close">
+            오늘 하루 창열지 않기<input type="checkbox">
+            <button type="button">닫기</button>
+        </div>
+    </div>
 
     <div class="introAni">
         <div><img src="./img/preloader.gif" alt=""></div>
