--- a/index.html
+++ b/index.html
@@ -68,14 +68,19 @@
                 </div>
             </div>
 
-            <div class="open">
+            <!-- <div class="open">
                 <span class="blind">메뉴열기</span><i class="fa-solid fa-bars"></i>
-            </div>
+            </div> -->
 
-            <div class="close">
+            <!-- <div class="close">
                 <span class="blind">메뉴열기</span><i class="fa-solid fa-xmark"></i>
-            </div>
-
+            </div> -->
+            
+            <a class="open">
+                <span></span>
+                <span></span>
+                <span></span>
+              </a>
 
         </header>
 
@@ -430,7 +435,9 @@
     </div>
 
     <div class="popup">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem eaque, architecto molestias error accusamus a laboriosam perferendis sunt voluptates fuga corporis cumque saepe esse. Eius doloribus voluptate doloremque minus sit!
+        동해물과 백두산이 마르고 닳도록 하나님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세.<br>
+        동해물과 백두산이 마르고 닳도록 하나님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세.<br>
+        동해물과 백두산이 마르고 닳도록 하나님이 보우하사 우리나라 만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세.
         <div class="close">
             오늘 하루 창열지 않기<input type="checkbox">
             <button type="button">닫기</button>
